WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73258
WebSQLDatabase could use some better error reporting.
https://bugs.webkit.org/show_bug.cgi?id=73258
Summary
WebSQLDatabase could use some better error reporting.
Michael Nordman
Reported
2011-11-28 14:59:59 PST
This is a continuation of
https://bugs.webkit.org/show_bug.cgi?id=71575
This patch provides a way for errors in webcore to get reported in chrome's 'histogram' logging mechanism. For the chromium side of this see
http://codereview.chromium.org/8590043/
Attachments
reportError
(39.16 KB, patch)
2011-11-28 15:06 PST
,
Michael Nordman
levin
: review-
levin
: commit-queue-
Details
Formatted Diff
Diff
reportError
(39.25 KB, patch)
2011-11-29 13:59 PST
,
Michael Nordman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Michael Nordman
Comment 1
2011-11-28 15:06:58 PST
Created
attachment 116830
[details]
reportError
WebKit Review Bot
Comment 2
2011-11-28 15:10:45 PST
Please wait for approval from
fishd@chromium.org
before submitting because this patch contains changes to the Chromium public API.
Michael Nordman
Comment 3
2011-11-28 16:37:20 PST
hello, ptal here and at
http://codereview.chromium.org/8590043/
David Levin
Comment 4
2011-11-28 23:05:03 PST
Comment on
attachment 116830
[details]
reportError View in context:
https://bugs.webkit.org/attachment.cgi?id=116830&action=review
Just a few minor nits. Should be very quick to fix up.
> Source/WebCore/storage/AbstractDatabase.cpp:189 > + const String& displayName, unsigned long estimatedSize, bool isSyncDatabase)
Since the new parameter isSyncDatabase is passed as true/false at the calling site (as opposed to a variable name that would be more readable), it is the current style to make this an enum.
> Source/WebCore/storage/AbstractDatabase.cpp:605 > +{ }
Ideally put the } on a new line or the { } at the end of the line is another typical style.
> Source/WebCore/storage/ChangeVersionWrapper.cpp:57 > + sqliteError, database->sqliteDatabase().lastErrorMsg());
extra space after ,
> Source/WebCore/storage/SQLTransaction.cpp:485 > + m_database->reportCommitTransactionResult(3, SQLError::UNKNOWN_ERR, 0); // ???
why the // ??? ?
Michael Nordman
Comment 5
2011-11-29 13:59:14 PST
Created
attachment 117043
[details]
reportError Thnx for looking... done, done, done, and done.
WebKit Review Bot
Comment 6
2011-11-30 04:59:21 PST
Comment on
attachment 117043
[details]
reportError Clearing flags on attachment: 117043 Committed
r101492
: <
http://trac.webkit.org/changeset/101492
>
WebKit Review Bot
Comment 7
2011-11-30 04:59:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug