Record UMA status on websql results. This is the chrome-side of https://bugs.webkit.org/show_bug.cgi?id=73258

BUG=98939
Review URL: http://codereview.chromium.org/8590043

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@113248 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 0b349ba539020caa0201c6523813a16fa41a3448